[package]
name = "Atcoder"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0


[dependencies]
proconio = {version = "0.5.0" ,features = ["derive"]}
superslice = "1.0.0"
num = "0.4.3"
itertools = "0.13.0"
regex = "1.11.0"
ac-library-rs = "0.1.1"
indexmap = "2.7.1"
once_cell = "1.20.2"
hashbag = "0.1.12"
rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
